# Projects

./: .gitignore  README
design_patterns/observer/: CMakeLists.txt
design_patterns/observer/include/: Client.hpp  Observer.hpp  Server.hpp  Subject.hpp
design_patterns/observer/src/: Client.cpp  Server.cpp
design_patterns/observer/uts/: observer_tests.cpp
exercises/: README
exercises/adapter2DVectorto1D/: CMakeLists.txt
exercises/adapter2DVectorto1D/uts/: adapter_tests.cpp
exercises/adapter_2DVector_to_1DVector/: CMakeLists.txt
exercises/adapter_2DVector_to_1DVector/include/: Solution.hpp
exercises/adapter_2DVector_to_1DVector/src/: Solution.hpp
exercises/adapter_2DVector_to_1DVector/uts/: adapter_tests.cpp
exercises/binary_tree/: CMakeLists.txt
exercises/binary_tree/include/: BinaryTree.hpp  Node.hpp
exercises/binary_tree/src/: BinaryTree.cpp  Node.cpp
exercises/binary_tree/uts/: exercise_tests.cpp
exercises/clean_exercise_template/uts/: exercise_tests.cpp
exercises/collatz_conjecture/: CMakeLists.txt
exercises/collatz_conjecture/include/: collatz_conjecture.hpp
exercises/collatz_conjecture/uts/: task_tests.cpp
exercises/fizz_buzz_with2if/: CMakeLists.txt  README.txt
exercises/fizz_buzz_with2if/include/: exercise.hpp
exercises/fizz_buzz_with2if/uts/: exercise_tests.cpp
exercises/string_permutation/: CMakeLists.txt  README
exercises/string_permutation/include/: string_permutation.hpp
exercises/string_permutation/uts/: string_tests.cpp
games2D/GameOfLife/: CMakeLists.txt
games2D/GameOfLife/src/: Grid.cpp
games_2D/Game_of_life/: CMakeLists.txt
games_2D/game_of_life/: CMakeLists.txt  README.txt
games_2D/game_of_life/include/: Game.hpp  Grid.hpp
games_2D/game_of_life/src/: Game.cpp  Grid.cpp  main.cpp
games_2D/game_of_life/uts/: game_of_life_tests.cpp
games_2D/snake/: CMakeLists.txt  README.txt
games_2D/snake/include/: Field.hpp  Game.hpp  Snake.hpp  World.hpp
games_2D/snake/src/: Game.cpp  Snake.cpp  World.cpp  main.cpp
games_2D/snake/uts/: snake_tests.cpp
projectSTL/data_structers/Array/: CMakeLists.txt
projectSTL/data_structers/ForwardList/: README.txt
projectSTL/data_structers/ForwardList/include/: Forward_list.hpp  Node.hpp
projectSTL/data_structers/ForwardList/src/: Node.cpp
projectSTL/data_structers/ForwardList/uts/: Forward_listTests.cpp
project_STL/: README.txt
project_STL/containers/: container_requirements.txt
project_STL/containers/array/include/: Array.hpp
project_STL/containers/array/uts/: ArrayTests.cpp
project_STL/containers/forward_list/include/: Forward_list.hpp  Node.hpp
project_STL/containers/forward_list/src/: Forward_list.cpp  Node.cpp
project_STL/containers/forward_list/uts/: Forward_listTests.cpp
project_STL/containers/vector/: CMakeLists.txt  README.txt
project_STL/containers/vector/include/: Vector.hpp
project_STL/containers/vector/uts/: VectorTests.cpp  Vector_tests.cpp
project_STL/data_structers/Array/include/: Array.hpp
project_STL/data_structers/Array/uts/: ArrayTests.cpp
project_STL/data_structures/forward_list/: CMakeLists.txt
project_STL/data_structures/forward_list/src/: Forward_list.cpp
smart_pointers/: README.txt
smart_pointers/unique_pointer/: CMakeLists.txt
smart_pointers/unique_pointer/include/: Unique_ptr.hpp
smart_pointers/unique_pointer/uts/: Unique_ptr_tests.cpp
